# rlcc

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: framework.rs  interpreter.rs  main.rs  parser.rs  test.rs  tokenizer.rs
src/parser/: mod.rs  scope.rs
tests/res/loltests/: 2-MustBeginWithHAI.lol
tests/res/loltests/1-Structure/: 10-CommasSeparate.lol  13-EllipsesJoinCRLF.lol  14-NoNewlineAfterJoinLF.lol  17-Includes.lol  5-IdentationIgnored.lol  6-WhitespaceBetweenTokens.lol  9-NewlineCRLF.lol
