[package]
name = "rlcc"
version = "0.1.0"
authors = ["jay"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
mediator-tracing = { git = "ssh://git@github.com/JayJeyaruban/mediator.git", features = [
  "export-tracing",
] }

[dev-dependencies]
test-generator = "0.3.1"
